--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,12 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
-
   min-width: 1024px;
   margin: 0 auto;
-
-  font: 20px "PT Mono";
+  padding: 0;
+  font-family: 'PT Mono', Arial, Helvetica, sans-serif;
+  font-size: 20px;
   color: #ffffff;
-
-  background: #da641a;
+  background-color: #da641a;
 }
 
 h1,
@@ -21,11 +18,11 @@ h2 {
 button {
   margin-right: 20px;
   padding: 0 16px;
-
-  font: bold 20px "PT Mono";
+  font-family: 'PT Mono', Arial, Helvetica, sans-serif;
+  font-size: 20px;
   line-height: 54px;
-
-  background: #ffffff;
+  font-weight: bold;
+  background-color: #ffffff;
   border: 0;
 }
 
@@ -45,9 +42,7 @@ form {
 .popup {
   position: absolute;
   z-index: 100;
-
   min-width: 200px;
-
   background-color: #414342;
   border-color: black;
   border-style: solid;
@@ -56,9 +51,7 @@ form {
 
 .section-title {
   position: relative;
-
   height: 52px;
-
   text-indent: -1000em;
 }
 
@@ -66,25 +59,25 @@ form {
   position: absolute;
   top: 0;
   left: 50%;
-
   transform: translateX(-50%);
 }
 
 header {
   position: relative;
-
-  padding-top: 80px;
-
+  padding-top: 60px;
   text-align: center;
-
   background: #2b5cfc;
   background: linear-gradient(180deg, #0000ff, #94c6fd);
   border-bottom: solid 8px #1cb34d;
 }
 
 .header-title {
-  height: 101px;
-  margin-bottom: 30px;
+  position: relative;
+  z-index: 1;
+  margin: 0;
+  margin-bottom: 60px;
+  padding: 0;
+  font-size: 69px;
 }
 
 .header-clouds {
@@ -93,9 +86,7 @@ header {
   right: 0;
   left: 0;
   z-index: 0;
-
   height: 363px;
-
   background: url("../img/clouds.png") top center repeat-x;
 }
 
@@ -103,11 +94,9 @@ header {
   position: absolute;
   bottom: 0;
   left: 50%;
-
   width: 91px;
   height: 48px;
   margin-left: -400px;
-
   background: url("../img/fence.gif") no-repeat;
 }
 
@@ -115,40 +104,24 @@ header {
   position: absolute;
   bottom: 0;
   left: 50%;
-
   width: 120px;
   height: 137px;
   margin-left: 300px;
-
   background: url("../img/tree.gif") no-repeat;
 }
 
 .header-soon {
   position: relative;
   z-index: 1;
-
   font-size: 26px;
-  color: #ffffff;
   color: rgba(255, 255, 255, 0.6);
-}
-
-.header-title {
-  position: relative;
-  z-index: 1;
-
-  margin: 0 0 28px;
-  padding: 0;
-
-  font-size: 69px;
 }
 
 .header-description {
   position: relative;
   z-index: 1;
-
   width: 620px;
   margin: 0 auto;
-
   font-size: 20px;
   line-height: 1.5;
 }
@@ -161,22 +134,20 @@ header {
 
 main {
   padding-top: 80px;
-
   background: linear-gradient(180deg, #ae340a, #fcb945);
 }
 
 .main-section {
   box-sizing: border-box;
-  margin: 0 auto 60px;
+  margin: 0 auto;
+  margin-bottom: 60px;
   padding: 10px;
 }
 
 .photogallery {
   position: relative;
-
   width: 1000px;
   padding: 10px 0;
-
   text-align: center;
 }
 
@@ -190,9 +161,10 @@ main {
   height: 271px;
   margin: 21px 8px;
   overflow: hidden;
-
   border: 0;
-  box-shadow: 7px 10px 0 rgba(0, 0, 0, 0.30), 0 0 20px rgba(255, 255, 190, 0.3);
+  box-shadow:
+    7px 10px 0 rgba(0, 0, 0, 0.30),
+    0 0 20px rgba(255, 255, 190, 0.3);
 }
 
 .reviews {
@@ -206,19 +178,16 @@ main {
 
 .reviews-filter {
   margin-bottom: 60px;
-
   white-space: nowrap;
 }
 
 .reviews-filter-item {
   display: inline-block;
   margin-right: 50px;
-
+  vertical-align: middle;
   font-weight: bold;
   font-size: 22px;
-  vertical-align: middle;
   color: #ffffff;
-
   border-bottom: dotted 2px #ffffff;
   cursor: pointer;
 }
@@ -232,11 +201,9 @@ input[type=radio]:checked + .reviews-filter-item {
   margin-right: 35px;
   margin-left: -15px;
   padding: 0 15px;
-
   line-height: 36px;
   color: #000000;
-
-  background: #ffffff;
+  background-color: #ffffff;
   border-bottom: solid 2px;
   box-shadow: 3px 3px 0 #000000;
   cursor: auto;
@@ -244,10 +211,8 @@ input[type=radio]:checked + .reviews-filter-item {
 
 .review {
   position: relative;
-
   margin-bottom: 75px;
   padding-left: 155px;
-
   font-size: 17px;
   line-height: 1.4;
 }
@@ -255,7 +220,6 @@ input[type=radio]:checked + .reviews-filter-item {
 .reviews-list-loading,
 .reviews-load-failure {
   padding-bottom: 40px;
-
   text-align: center;
 }
 
@@ -265,11 +229,9 @@ input[type=radio]:checked + .reviews-filter-item {
 
 .reviews-load-failure:after {
   content: "";
-
   display: inline-block;
   width: 40px;
   height: 40px;
-
   background: url("../img/icon-cross.png") no-repeat center;
 }
 
@@ -284,9 +246,7 @@ input[type=radio]:checked + .reviews-filter-item {
   right: 0;
   bottom: 0;
   left: 0;
-
   display: block;
-
   background: url("../img/icon-cross.png") center no-repeat;
   border: solid 1px rgba(255, 255, 255, 0.5);
   border-radius: 50%;
@@ -298,23 +258,25 @@ input[type=radio]:checked + .reviews-filter-item {
   display: block;
   width: 30px;
   height: 30px;
-
   background: url("../img/icon-star.png") top left repeat-x;
 }
-
 
 .review-rating-one {
   width: 40px;
 }
+
 .review-rating-two {
   width: 80px;
 }
+
 .review-rating-three {
   width: 120px;
 }
+
 .review-rating-four {
   width: 160px;
 }
+
 .review-rating-five {
   width: 200px;
 }
@@ -323,33 +285,27 @@ input[type=radio]:checked + .reviews-filter-item {
   position: absolute;
   top: 5px;
   left: 0;
-
   width: 124px;
   height: 124px;
-
   border-radius: 50%;
 }
 
 .review-quiz {
   font-size: 15px;
-  color: #ffffff;
   color: rgba(255, 255, 255, 0.5);
 }
 
 .review-quiz-answer {
   display: inline-block;
   margin: 0 5px;
-
   vertical-align: middle;
   text-decoration: underline;
-
   cursor: pointer;
 }
 
 .review-quiz-answer-active {
   color: #ffffff;
   text-decoration: none;
-
   cursor: default;
 }
 
@@ -359,33 +315,27 @@ input[type=radio]:checked + .reviews-filter-item {
 
 .reviews-controls-item {
   display: inline-block;
-
   vertical-align: middle;
-
   cursor: pointer;
 }
 
 .reviews-controls-more {
   margin-right: 26px;
   padding: 0 30px;
-
-  font-weight: bold;
   font-size: 20px;
   line-height: 55px;
+  font-weight: bold;
   color: #000000;
-
-  background: #ffffff;
+  background-color: #ffffff;
   box-shadow: 5px 5px 0 rgba(0, 0, 0, 1);
 }
 
 .reviews-controls-new {
   padding: 0 18px;
-
   font-size: 18px;
   line-height: 36px;
   color: #000000;
-
-  border: solid 1px;
+  border: 1px solid #ffffff;
 }
 
 footer {
@@ -400,8 +350,8 @@ footer a {
 }
 
 footer p {
-  margin-bottom: 0;
-  padding-bottom: 20px;
+  margin: 0;
+  margin-top: 20px;
 }
 
 .overlay-container,
@@ -412,19 +362,15 @@ footer p {
   bottom: 0;
   left: 0;
   z-index: 1;
-
   overflow: auto;
-
-  background: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .review-form {
   position: relative;
-
   width: 510px;
   margin: 100px auto;
   padding: 0 10px;
-
   text-align: left;
 }
 
@@ -438,12 +384,9 @@ footer p {
   position: absolute;
   top: -5px;
   right: 0;
-
   padding: 0 10px;
-
   font-size: 45px;
   text-align: center;
-
   cursor: pointer;
 }
 
@@ -451,7 +394,6 @@ footer p {
   margin: 0;
   margin-bottom: 15px;
   padding: 0;
-
   border: 0;
 }
 
@@ -466,19 +408,18 @@ footer p {
 
 .review-form-group-mark input[type=radio] {
   position: absolute;
-
   visibility: hidden;
 }
 
 .review-mark-label {
-  background: none;
-  color: #ffffff;
-  cursor: pointer;
+  position: absolute;
+  width: 40px;
   height: 30px;
   margin: 0 10px;
-  position: absolute;
   text-indent: -100em;
-  width: 40px;
+  color: #ffffff;
+  background: none;
+  cursor: pointer;
 }
 
 .review-mark-label-1 { width: 40px; }
@@ -486,8 +427,8 @@ footer p {
 .review-mark-label-3 { width: 120px; }
 .review-mark-label-4 { width: 160px; }
 .review-mark-label-5 {
-  background: url('../img/icon-star-inactive-form.png') repeat-x;
   width: 200px;
+  background: url('../img/icon-star-inactive-form.png') repeat-x;
 }
 
 input[type=radio]:checked + .review-mark-label {
@@ -501,11 +442,9 @@ input[type=radio]:checked + .review-mark-label {
 
 .review-form-field {
   padding: 5px;
-
   font: 20px/1.5 "PT Mono";
   color: #000000;
-
-  background: #ffffff;
+  background-color: #ffffff;
   border: 0;
 }
 
@@ -519,26 +458,22 @@ input[type=radio]:checked + .review-mark-label {
 
 .review-form-control {
   display: inline-block;
-
   vertical-align: top;
 }
 
 .review-fields {
   font-size: 16px;
-  color: #ffffff;
   color: rgba(255, 255, 255, 0.6);
   white-space: normal;
 }
 
 .review-fields-label {
   text-decoration: underline;
-
   cursor: pointer;
 }
 
 .footer-link {
   position: relative;
-
   display: block;
   width: 250px;
   margin: 0 auto;
@@ -553,34 +488,28 @@ input[type=radio]:checked + .review-mark-label {
   position: absolute;
   top: 0;
   left: 50%;
-
   transform: translateX(-50%);
 }
 
 .setup {
-  width: 800px;
-
   position: absolute;
   left: 50%;
   top: 80px;
-  transform: translateX(-50%);
-
-  background: #89a1fd;
-  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.25);
-  box-sizing: border-box;
-  color: #000;
-
   z-index: 3;
+  box-sizing: border-box;
+  width: 800px;
+  color: #000000;
+  background-color: #89a1fd;
+  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.25);
+  transform: translateX(-50%);
 }
 
 .setup-open-icon {
   position: absolute;
   top: 100px;
   right: 100px;
-
-  cursor: pointer;
-
   z-index: 2;
+  cursor: pointer;
 }
 
 .setup-open-icon:hover {
@@ -597,11 +526,9 @@ input[type=radio]:checked + .review-mark-label {
 
 .setup-open-icon,
 .setup-user-pic {
+  display: inline-block;
   width: 40px;
   height: 40px;
-
-  display: inline-block;
-
   margin-right: 5px;
   margin-top: -10px;
   border-radius: 40px;
@@ -610,15 +537,13 @@ input[type=radio]:checked + .review-mark-label {
 }
 
 .setup-user-name {
-  background: transparent;
-  border: 0;
-  color: #fff;
-
+  width: 500px;
   font-family: 'PT Mono', serif;
   font-size: 30px;
   font-weight: 900;
-
-  width: 500px;
+  color: #ffffff;
+  background: transparent;
+  border: 0;
 }
 
 .setup-user-name:valid {
@@ -626,65 +551,56 @@ input[type=radio]:checked + .review-mark-label {
 }
 
 .setup-user-name:invalid {
-  border: 2px solid red;
+  border: 2px solid #ff0000;
 }
 
 .setup-user-name:focus {
-  border-bottom: solid 1px #000;
+  border-bottom: solid 1px #000000;
   outline: none;
 }
 
 .setup-close {
   float: right;
-
   top: 20px;
   right: 20px;
-
   font-size: 70px;
-  color: #000;
-  cursor: pointer;
-
+  color: #000000;
   transform: translateY(-0.3em);
+  cursor: pointer;
 }
 
 .setup-artifacts-shop {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
-
-  padding-top: 20px;
-  padding-bottom: 20px;
-
   width: 716px;
   height: 65px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .setup-player {
-  padding-top: 20px;
   position: relative;
-
   height: 300px;
   min-height: 300px;
+  padding-top: 20px;
 }
 
 .setup-wizard {
-  width: 250px;
-  height: 250px;
-
   position: absolute;
   bottom: 0;
   left: 50px;
+  width: 250px;
+  height: 250px;
 }
 
 .setup-fireball-wrap {
   position: absolute;
   left: 300px;
   top: 0;
-
   width: 75px;
   height: 75px;
-
-  background: #ee4830;
+  background-color: #ee4830;
 }
 
 .setup-fireball {
@@ -698,11 +614,9 @@ input[type=radio]:checked + .review-mark-label {
   position: absolute;
   bottom: 0;
   right: 46px;
-
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
   width: 260px;
   height: 260px;
 }
@@ -710,11 +624,9 @@ input[type=radio]:checked + .review-mark-label {
 .setup-artifacts-cell {
   width: 65px;
   height: 65px;
-
-  background: rgba(0, 0, 0, 0.1);
-  border: solid 1px rgba(255, 255, 255, 0.5);
-
   box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: solid 1px rgba(255, 255, 255, 0.5);
 }
 
 .setup-artifacts-cell:last-child {
@@ -722,27 +634,22 @@ input[type=radio]:checked + .review-mark-label {
 }
 
 .setup-footer {
-  border-top: 10px solid #1cb34d;
   padding-bottom: 20px;
-
   background-color: #da641a;
+  border-top: 10px solid #1cb34d;
 }
 
 .setup-similar-title {
-  color: #fff;
-
   margin-left: 20px;
+  color: #ffffff;
 }
 
 .setup-similar-list {
   display: flex;
-  flex-direction: row;
+  flex-wrap: nowrap;
   justify-content: space-between;
-
   margin-left: 20px;
   margin-right: 20px;
-
-  flex-wrap: nowrap;
 }
 
 .setup-similar-item {
@@ -753,38 +660,32 @@ input[type=radio]:checked + .review-mark-label {
 
 .setup-similar-label {
   margin: 5px;
-
-  color: #fff;
-
+  color: #ffffff;
 }
 
 .setup-similar-content {
   position: relative;
-
   width: 150px;
   height: 150px;
-
   background-color: #414342;
   box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.25);
 }
 
 .setup-similar-wizard {
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
   bottom: 0;
-
-  margin: 0 auto;
-
+  left: 50%;
   width: 100px;
+  margin: 0 auto;
+  transform: translateX(-50%);
 }
 
 .setup-submit {
   display: block;
-  margin: 20px auto 0;
-
-  background: #1cb34d;
-  color: #fff;
+  margin: 20px auto;
+  margin-bottom: 0;
+  color: #ffffff;
+  background-color: #1cb34d;
 }
 
 .setup-submit:disabled {
@@ -803,9 +704,7 @@ input[type=radio]:checked + .review-mark-label {
   display: inline-block;
   width: 30px;
   height: 46px;
-
   vertical-align: middle;
-
   background: url("../img/arrows-sprite.png") no-repeat;
   cursor: pointer;
 }
@@ -816,15 +715,11 @@ input[type=radio]:checked + .review-mark-label {
 
 .overlay-gallery-preview {
   position: relative;
-
   display: inline-block;
   min-width: 300px;
   min-height: 300px;
-
   vertical-align: middle;
-
   font-size: 0;
-
   border: dotted 1px rgba(255, 255, 255, 0.2);
 }
 
@@ -832,7 +727,6 @@ input[type=radio]:checked + .review-mark-label {
   position: absolute;
   top: -1.5em;
   left: 0;
-
   font-weight: bold;
   font-size: 14px;
   color: #ffffff;
@@ -840,33 +734,28 @@ input[type=radio]:checked + .review-mark-label {
 
 .upload {
   position: relative;
-
   display: inline-block;
-
   box-sizing: border-box;
-
   width: 40px;
+  height: 40px;
   min-width: 40px;
   max-width: 40px;
-  height: 40px;
 }
 
 .upload .setup-user-pic {
-  display: block;
-  margin: 0;
-
   position: absolute;
   left: 0;
   top: 0;
+  display: block;
+  margin: 0;
 }
 
 .upload input {
   position: absolute;
-  z-index: 0;
-  opacity: 0;
-  width:100%;
-  height:100%;
-
-  left: 0;
   top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 }
